# batoid

./: .codecov.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.rst  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  compile_on_cori_gpu.txt  pyproject.toml  pytest.ini  release_workflow.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: ci.yml  wheels.yml  wheeltest.yml
batoid/: .gitignore  __init__.py  _version.py  analysis.py  app.py  coating.py  constants.py  coordSys.py  coordTransform.py  coordsys.py  coordsys2.py  coordtransform.py  coordtransform2.py  global_vars.py  lattice.py  medium.py  medium2.py  obscuration.py  obscuration2.py  optic.py  parse.py  plotUtils.py  psf.py  ray.py  rayVector.py  rayVector2.py  rayVector4.py  rays.py  surface.py  surface2.py  table.py  telescope.py  trace.py  utils.py
batoid/data/AuxTel/: AuxTel.yaml  (+1 more)
demo/: demoSplit.py
devel/: test_gpu_sag.py
doc/: Makefile  batoid.rst  conf.py  index.rst  jtrace.rst
docs/: .buildinfo  Makefile  analysis.html  analysis.rst  batoid.rst  coatings.html  conf.py  coords.html  coords.rst  genindex.html  index.html  index.rst  intro.rst  lattice.html  media.html  media.rst  objects.inv  obscurations.html  optic.html  optic.rst  overview.html  py-modindex.html  rays.html  search.html  searchindex.js  surfaces.html  surfaces.rst  table.html
docs/_modules/: index.html
docs/_sources/: table.rst.txt
docs/_static/: documentation_options.js
docs/source/: batoid.rst  modules.rst
docsrc/: Makefile  coatings.rst  conf.py  coords.rst  index.rst  lattice.rst  obscurations.rst  rays.rst  surfaces.rst
include/: LRUCache11.hpp  asphere.h  asphere2.h  batoid.h  bicubic.h  bicubic2.h  bilinear2.h  coating.h  coordSys.h  coordSysOld.h  coordTransform.h  coordTransformOld.h  coordsys.h  coordsys2.h  coordtransform.h  coordtransform2.h  dualView.h  except.h  extendedAsphere2.h  intersection.h  jtrace.h  medium.h  medium2.h  obscuration.h  obscuration2.h  paraboloid.h  paraboloid2.h  plane.h  plane2.h  planeOld.h  polynomialSurface.h  quadric.h  quadric2.h  ray.h  rayVector.h  rayVector2.h  rayVector3.h  rayVector4.h  solve.h  sphere.h  (+13 more)
jtrace/: __init__.py  ray.py  rays.py  telescope.py  yaml.py
notebook/: Analytic despace aberration.ipynb  Apochromat.ipynb  Aspheric Newtonian Telescope.ipynb  AuxTel perturbations.ipynb  AuxTel trace.ipynb  CBP distortion.ipynb  ComCam trace.ipynb  DECam draw2d.ipynb  DECam perturbations.ipynb  DECam trace.ipynb  DESI model details.ipynb  DESI trace.ipynb  Distortion.ipynb  FFT vs Huygens.ipynb  Ghosts.ipynb  HSC 3D.ipynb  HSC ghosts.ipynb  HSC perturbations.ipynb  HSC pupil characterization.ipynb  HSC trace.ipynb  Huygens PSF.ipynb  LSST Coordinate Systems Plotly.ipynb  LSST Coordinate Systems.ipynb  LSST M1M3 Bending Modes.ipynb  LSST decenters.ipynb  LSST donuts.ipynb  LSST ghosts.ipynb  LSST perturbations.ipynb  LSST pupil characterization.ipynb  LSST trace.ipynb  LSST+CBP.ipynb  LSST.ipynb  Newtonian Telescope.ipynb  PH != Pupil.ipynb  PH = pupil.ipynb  RayVector.ipynb  Rays.ipynb  Rubin App.ipynb  Rubin Coords App.ipynb  Thin Lens.ipynb  (+4 more)
pysrc/: asphere.cpp  asphere2.cpp  batoid.cpp  bicubic.cpp  bicubic2.cpp  bilinear2.cpp  coating.cpp  coordSys.cpp  coordSysOld.cpp  coordTransform.cpp  coordTransformOld.cpp  coordsys.cpp  coordsys2.cpp  coordtransform.cpp  coordtransform2.cpp  extendedAsphere2.cpp  intersection.cpp  jtrace.cpp  medium.cpp  medium2.cpp  obscuration.cpp  obscuration2.cpp  paraboloid.cpp  paraboloid2.cpp  plane.cpp  plane2.cpp  polynomialSurface.cpp  quadric.cpp  quadric2.cpp  ray.cpp  rayVector.cpp  rayVector2.cpp  rayVector3.cpp  rayVector4.cpp  sphere.cpp  sphere2.cpp  sum.cpp  surface.cpp  surface2.cpp  table.cpp  (+6 more)
recipe/: libomp.rb
src/: asphere.cpp  asphere2.cpp  batoid.cpp  bicubic.cpp  bicubic2.cpp  bilinear2.cpp  coating.cpp  coordSys.cpp  coordSysOld.cpp  coordTransform.cpp  coordsys.cpp  coordsys2.cpp  coordtransform.cpp  coordtransform2.cpp  dualView.cpp  dualViewOld.cpp  extendedAsphere2.cpp  intersection.cpp  jtrace.cpp  medium.cpp  medium2.cpp  obscuration.cpp  obscuration2.cpp  paraboloid.cpp  paraboloid2.cpp  plane.cpp  plane2.cpp  planeOld.cpp  polynomialSurface.cpp  quadric.cpp  quadric2.cpp  ray.cpp  rayVector.cpp  rayVector2.cpp  rayVector3.cpp  rayVector4.cpp  rayVectorOld.cpp  sphere.cpp  sphere2.cpp  sum.cpp  (+9 more)
tests/: .coveragerc  conftest.py  parallel_trace_timing.py  test_Asphere.py  test_Bicubic.py  test_Coating.py  test_CoordSys.py  test_CoordSysOld.py  test_CoordTransform.py  test_Lattice.py  test_Medium.py  test_OPDScreen.py  test_Obscuration.py  test_Optic.py  test_Paraboloid.py  test_Plane.py  test_Quadric.py  test_RayVector.py  test_Sphere.py  test_Sum.py  test_Tilted.py  test_Zernike.py  test_analysis.py  test_asphere.py  test_bicubic.py  test_coating.py  test_coordsys.py  test_coordtransform.py  test_draw.py  test_gpu.py  test_helpers.py  test_inplace.py  test_intersection.py  test_lattice.py  test_medium.py  test_notebooks.py  test_obscuration.py  test_optic.py  test_paraboloid.py  test_plane.py  (+20 more)
tests/old/: test_analysis.py  test_notebooks.py  test_optic.py  test_ray.py  test_reflection.py  test_table.py  test_utils.py
tests/testdata/: CBP_SRT1.txt  CBP_SRT2.txt  CBP_SRT3.txt  CBP_SRT4.txt  ComCam_SRT1_G.txt  ComCam_SRT1_I.txt  ComCam_SRT1_R.txt  ComCam_SRT1_U.txt  ComCam_SRT1_Y.txt  ComCam_SRT1_Z.txt  ComCam_SRT2_G.txt  ComCam_SRT2_I.txt  ComCam_SRT2_R.txt  ComCam_SRT2_U.txt  ComCam_SRT2_Y.txt  ComCam_SRT2_Z.txt  DECam_raytrace_0.txt  DECam_raytrace_1.txt  DECam_raytrace_2.txt  HSC_Zernike.txt  HSC_huygensPSF.txt  HSC_raytrace_3.txt  HSC_wavefront.txt  LSST_fftpsf_0.0_0.0.txt  LSST_fftpsf_0.0_1.225.txt  LSST_fftpsf_0.0_1.75.txt  LSST_fftpsf_1.176_1.176.txt  LSST_hpsf_0.0_0.0.txt  LSST_hpsf_0.0_1.225.txt  LSST_hpsf_0.0_1.75.txt  LSST_hpsf_1.176_1.176.txt  LSST_trace_0.txt  LSST_trace_1.txt  LSST_trace_2.txt  LSST_wf_0.0_0.0.txt  LSST_wf_0.0_1.225.txt  LSST_wf_0.0_1.75.txt  LSST_wf_1.176_1.176.txt  kbk7.csv  rt1.txt  (+2 more)
(+94 files in other folders)
